# InferSpore

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/kernels/: CMakeLists.txt  act_kernel.cu  attn_softmax_kernel.cu  build_casual_mask.cu  cal_paddingoffset.cu  concat_past_kv.cu  concat_past_kv.h  cublas_utils.cc  fused_addresidual_norm.cu  fused_addresidual_norm.h  fused_decoder_self_attention.cu  fused_decoder_self_attention.h  fused_transpose_and_remv_pad.cu  input_embedding.cu  linear.cu  linear.h  qkv_bias_and_RoPE.cu  repeat_kv.cu  repeat_kv.h  topK.cu  topK.h
src/memory/allocator/: base_allocator.h  cuda_allocator.h
src/models/: basemodel.h  tokenizer.h
src/utils/: cuda_debug_utils.cuh  debug_utils.h  macro.h  model_utils.h  params.h  string_utils.h  tensor.h  vectorize_utils.h  weight_utils.cu  weight_utils.h
src/weights/: base_weights.h  weight.h
src/weights/llama/: layer_weights.cc  layer_weights.h  llama_weights.cc
tests/unittests/: CMakeLists.txt  test_act.cu  test_bias_and_RoPE.cu  test_bmm.cu  test_cal_paddingoffset.cu  test_casual_mask.cu  test_concat_kv.cu  test_fused_addresidual_norm.cu  test_fused_decoder_attention.cu  test_fused_trans_remv_pad.cu  test_input_embedding.cu  test_mask_softmax.cu  test_repeat_kv.cu
tools/: convert_downloaded_llama_weights.py  weights_convert.py
